# MemPlumber

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  appveyor.yml  cppcheckSuppressions.txt  memplumber-internals.h  memplumber.cpp  memplumber.h  typos-config.toml
.github/: dependabot.yml
.github/workflows/: auto_update.yml  build_and_test.yml
Examples/: CMakeLists.txt  basic-example.cpp  dump-to-file-example.cpp  static-example.cpp
Tests/: CMakeLists.txt  basic-tests.cpp  inner-lib-tests.cpp  load-tests.cpp  static-var-tests.cpp  test-macros.h  tests-main.cpp
Tests/test-lib/: CMakeLists.txt  test-lib.cpp  test-lib.h
ci/: clang-tidy-all.sh
